--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@elastic/datemath": "^5.0.3",
+    "@elastic/eui": "^49.0.0",
+    "@emotion/react": "^11.8.1",
     "@mantine/core": "^3.6.9",
     "@mantine/dates": "^3.6.9",
     "@mantine/dropzone": "^3.6.9",
@@ -21,7 +24,9 @@
     "@mantine/ssr": "^3.6.9",
     "@radix-ui/react-icons": "^1.1.0",
     "dayjs": "^1.10.7",
+    "moment": "^2.29.1",
     "next": "12.1.0",
+    "prop-types": "^15.8.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1"
