--- a/package.json
+++ b/package.json
@@ -9,25 +9,32 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@mantine/core": "^3.6.9",
-    "@mantine/dates": "^3.6.9",
-    "@mantine/dropzone": "^3.6.9",
-    "@mantine/hooks": "^3.6.9",
-    "@mantine/modals": "^3.6.9",
-    "@mantine/next": "^3.6.9",
-    "@mantine/notifications": "^3.6.9",
-    "@mantine/prism": "^3.6.9",
-    "@mantine/rte": "^3.6.9",
+    "@mantine/core": "^4.1.2",
+    "@mantine/dates": "^4.1.2",
+    "@mantine/dropzone": "^4.1.2",
+    "@mantine/form": "^4.1.2",
+    "@mantine/hooks": "^4.1.2",
+    "@mantine/modals": "^4.1.2",
+    "@mantine/next": "^4.1.2",
+    "@mantine/notifications": "^4.1.2",
+    "@mantine/prism": "^4.1.2",
+    "@mantine/rte": "^4.1.2",
+    "@mantine/spotlight": "^4.1.2",
     "@mantine/ssr": "^3.6.9",
     "@radix-ui/react-icons": "^1.1.0",
-    "dayjs": "^1.10.7",
+    "dayjs": "^1.11.0",
     "next": "12.1.0",
     "react": "17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "17.0.2",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "tabler-icons-react": "^1.43.0"
   },
   "devDependencies": {
+    "@types/node": "^17.0.23",
+    "@types/react": "^17.0.43",
     "eslint": "8.9.0",
-    "eslint-config-next": "12.1.0"
+    "eslint-config-next": "12.1.0",
+    "typescript": "^4.6.3"
   }
 }
