--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mantine/rte": "^4.1.2",
     "@mantine/spotlight": "^4.1.2",
     "@mantine/ssr": "^3.6.9",
+    "@prisma/client": "^3.12.0",
     "dayjs": "^1.11.0",
     "next": "12.1.0",
     "prop-types": "^15.8.1",
@@ -35,6 +36,7 @@
     "@types/react": "^17.0.43",
     "eslint": "8.9.0",
     "eslint-config-next": "12.1.0",
+    "prisma": "^3.12.0",
     "typescript": "^4.6.3"
   }
 }
